# TrollOS

./: README.md  manifest.in  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/: pyproject.toml  sudoBot.py
src/TrollOS.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
