[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trollos"
version = "1.0.0"
description = "AI-powered retro UNIX-style troll terminal using Llama3"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
    {name = "Harsh"}
]

dependencies = [
    "textual>=0.50",
    "rich>=13.7.1"
]

[project.scripts]
trollos = "trollos.app:main"
