[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TrollOS"
version = "0.1.0"
authors = [
    { name="SAURABH", email="msharkesh206@gmail.com" }
]
description = "AI-powered retro terminal troll chat running on Llama3"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50",
    "rich>=13.7.1"
]

[project.urls]
Homepage = "https://github.com/Mishra1007/TrollOS"

[project.scripts]
trollos = "trollos.app:TrollChat"
